--- a/templates/moduloPersonas/dashboardUser.html
+++ b/templates/moduloPersonas/dashboardUser.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %}
+{% extends "../base.html" %}
 
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <h1>Probando el panel</h1>
+    <h1>Panel para el Usuario normal</h1>
 {% endblock %}
