--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -31,9 +31,7 @@
 
         <!-- Outer Row -->
         <div class="row justify-content-center">
-
             <div class="col-xl-10 col-lg-12 col-md-9">
-
                 <div class="card o-hidden border-0 shadow-lg my-5">
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
@@ -48,10 +46,12 @@
                                         {% csrf_token %}
                                         {{ form.non_field_errors }}
                                         <div class="form-group">
-                                            <input type="text" class="form-control form-control-user" id="id_username" name="username" placeholder="Nombre de usuario...">
+                                            <input type="text" class="form-control form-control-user" id="id_username"
+                                                name="username" placeholder="Nombre de usuario...">
                                         </div>
                                         <div class="form-group">
-                                            <input type="password" class="form-control form-control-user" id="id_password" name="password" placeholder="Contraseña">
+                                            <input type="password" class="form-control form-control-user"
+                                                id="id_password" name="password" placeholder="Contraseña">
                                         </div>
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox small">
@@ -83,11 +83,8 @@
                         </div>
                     </div>
                 </div>
-
             </div>
-
         </div>
-
     </div>
 
     <!-- Bootstrap core JavaScript-->
